Name:          graph-test
Version:       0.0.1
Cabal-Version: 2.0
Author:        Kai-Oliver Prott
Maintainer:    kai.prott@hotmail.de
Build-Type:    Simple

executable graph-test
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  main-is:          Test.hs
  build-depends:
    base,
    vector,
    containers
